dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: dev
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: dermaday
    app.kubernetes.io/environment: dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api-dev.dermaday.me
      secretName: backend-tls
  rules:
    - host: api-dev.dermaday.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  name: http
